    WITH-LOCAL-INTERRUPTS as local macros. Refer to documentation string
    for details.
  * enhancement: name of a socket-stream is now "a socket" instead of
    "a constant string".
  * enhancement: SB-POSIX now supports lockf(). (Thanks to Zach Beane.)  
  * enhancement: SB-POSIX now supports getcwd(). (Thanks to Tassilo Horn.)
  * optimization: bignum printing speed has been improved by 20-40%
    (depending on the bignum size.)
  * bug fix: WITH-MUTEX and WITH-RECURSIVE-LOCK are now interrupt safe
    on Linux.
  * bug fix: the cache used by the CLOS to store precomputed effective
    methods, slot offsets, and constant return values is now thread and
    interrupt safe.
  * bug fix: generic function dispatch function updating is now thread
    and interrupt safe (in the sense that the known issues have been
    fixed.)
  * bug fix: ADD/REMOVE-METHOD is now thread and interrupt safe.
  * bug fix: interning EQL-specializers is now thread and interrupt safe.

changes in sbcl-1.0.6 relative to sbcl-1.0.5:
  * new contrib: sb-cover, an experimental code coverage tool, is included
    as a contrib module.
  * optimization: STRING-TO-OCTETS for unibyte encodings and UTF-8 is
    significantly faster.
  * optimization: calls of the form (AREF FOO (+ INDEX <constant>)) now
    produce more efficient code on x86-64 if the compiler can determine
    that (+ INDEX <constant>) does not require a bounds check and FOO
    has an element type at least 8 bits wide.
  * enhancement: a new, experimental synchronous timeout facility is
    provided. Refer to SB-SYS:WITH-DEADLINE for details.
  * enhancement: when a symbol name conflict error arises, the
    conflicting symbols are always printed with a package prefix.
    (thanks to Kevin Reid)
  * enhancement: stepping is now once again supported on the SPARC and
    MIPS platforms.  (It is also now more likely to work on CheneyGC
    builds on the PPC.)
  * enhancement: sb-sprof can now also track and report accurate call