@@ -1,4 +1,10 @@
-;; Do not alter this file unless you edit test-driver.lisp to match
+
+;;;
+;;; The order of the forms must not change, as the order is checked in
+;;; `test-driver.lisp'. Thus do not alter this file unless you edit
+;;; test-driver.lisp to match.
+;;;
+
 (declaim (optimize (debug 3)))
 (in-package :cl-user)
 
@@ -64,4 +70,3 @@
 
 (define-setf-expander s (a b)
   (format t "~a ~a~%" a b))
-
